9d_kyverno_example_policy-validate_v2.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: testpolicy
spec:
  rules:
  - name: check-namespace-label
    match:
      all:
      - resources:
          kinds:
          - pods
          namespaces:
          - bookinfo
    # The `validate` statement tries to positively check what is defined. If the statement, when compared with the requested resource, is true, it is allowed. If false, it is blocked.
    validate:
      # The `message` is what gets displayed to a user if this rule fails validation.
      message: "You must have label `purpose` with value `production` set."
      # The `pattern` object defines what pattern will be checked in the resource. In this case, it is looking for `metadata.labels` with `purpose=production`.
      pattern:
        metadata:
          labels:
            purpose: production
